Added DB entity validation, improved MenuController and Menu view, started work on reservation functionality. Small UI changes.

--- a/Web/Restaurant.Web/Views/Menu/All.cshtml
+++ b/Web/Restaurant.Web/Views/Menu/All.cshtml
@@ -5,8 +5,9 @@
     this.ViewData["Title"] = "Menu";
 }
 
-<div class="container-xxl py-5 bg-dark hero-header mb-5">
+<div class="container-xxl py-3 bg-dark hero-header mb-5">
     <div class="container text-center my-5 pt-5 pb-4">
+        <h6 class="display-3 section-title text-white mb-3 animated slideInDown">Menu</h6>
     </div>
 </div>
 
@@ -14,9 +15,12 @@
 <div class="container-xxl py-5">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-            <h5 class="section-title ff-secondary text-center text-primary fw-normal">Food Menu</h5>
+            @*<h5 class="section-title ff-secondary text-center text-primary fw-normal">Food Menu</h5>*@
             <h1 class="mb-5">Most Popular Items</h1>
         </div>
+
+<!--TO DO: Add most popular items-->
+
         <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.1s">
             <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
                 <li class="nav-item">
@@ -33,7 +37,7 @@
                         <i class="fa fa-hamburger fa-2x text-primary"></i>
                         <div class="ps-3">
                             <small class="text-body">Special</small>
-                            <h6 class="mt-n1 mb-0">Launch</h6>
+                            <h6 class="mt-n1 mb-0">Lunch</h6>
                         </div>
                     </a>
                 </li>
@@ -48,57 +52,66 @@
                 </li>
             </ul>
             <div class="tab-content">
-                @foreach (var meal in Model.Meals)
-                {
-                    <div id="tab-1" class="tab-pane fade show p-0 active">
-                        <div class="row g-4">
+                <div id="tab-1" class="tab-pane fade show p-0 active">
+                    <div class="row g-4">
+
+                        @foreach (var meal in Model.Meals.Where(m => m.MealType == "Breakfast"))
+                        {
                             <div class="col-lg-6">
                                 <div class="d-flex align-items-center">
                                     <img class="flex-shrink-0 img-fluid rounded" src="img/menu-7.jpg" alt="" style="width: 80px;">
                                     <div class="w-100 d-flex flex-column text-start ps-4">
                                         <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                            <span>Chicken Burger</span>
+                                            <span>@meal.Name</span>
                                             <span class="text-primary">@meal.Price</span>
                                         </h5>
                                         <small class="fst-italic">@meal.Description</small>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        }
                     </div>
-                }
+                </div>
 
                 <div id="tab-2" class="tab-pane fade show p-0">
                     <div class="row g-4">
-                        <div class="col-lg-6">
-                            <div class="d-flex align-items-center">
-                                <img class="flex-shrink-0 img-fluid rounded" src="img/menu-7.jpg" alt="" style="width: 80px;">
-                                <div class="w-100 d-flex flex-column text-start ps-4">
-                                    <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                        <span>Chicken Burger</span>
-                                        <span class="text-primary">$115</span>
-                                    </h5>
-                                    <small class="fst-italic">Ipsum ipsum clita erat amet dolor justo diam</small>
+
+                        @foreach (var meal in Model.Meals.Where(m => m.MealType == "Lunch"))
+                        {
+                            <div class="col-lg-6">
+                                <div class="d-flex align-items-center">
+                                    <img class="flex-shrink-0 img-fluid rounded" src="img/menu-7.jpg" alt="" style="width: 80px;">
+                                    <div class="w-100 d-flex flex-column text-start ps-4">
+                                        <h5 class="d-flex justify-content-between border-bottom pb-2">
+                                            <span>@meal.Name</span>
+                                            <span class="text-primary">@meal.Price</span>
+                                        </h5>
+                                        <small class="fst-italic">@meal.Description</small>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        }
                     </div>
                 </div>
 
                 <div id="tab-3" class="tab-pane fade show p-0">
                     <div class="row g-4">
-                        <div class="col-lg-6">
-                            <div class="d-flex align-items-center">
-                                <img class="flex-shrink-0 img-fluid rounded" src="img/menu-7.jpg" alt="" style="width: 80px;">
-                                <div class="w-100 d-flex flex-column text-start ps-4">
-                                    <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                        <span>Chicken Burger</span>
-                                        <span class="text-primary">$115</span>
-                                    </h5>
-                                    <small class="fst-italic">Ipsum ipsum clita erat amet dolor justo diam</small>
+
+                        @foreach (var meal in Model.Meals.Where(m => m.MealType == "Dinner"))
+                        {
+                            <div class="col-lg-6">
+                                <div class="d-flex align-items-center">
+                                    <img class="flex-shrink-0 img-fluid rounded" src="img/menu-7.jpg" alt="" style="width: 80px;">
+                                    <div class="w-100 d-flex flex-column text-start ps-4">
+                                        <h5 class="d-flex justify-content-between border-bottom pb-2">
+                                            <span>@meal.Name</span>
+                                            <span class="text-primary">@meal.Price</span>
+                                        </h5>
+                                        <small class="fst-italic">@meal.Description</small>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        }
                     </div>
                 </div>
             </div>
