--- a/Web/Restaurant.Web/Views/Home/About.cshtml
+++ b/Web/Restaurant.Web/Views/Home/About.cshtml
@@ -2,8 +2,9 @@
     this.ViewData["Title"] = "About us";
 }
 
-<div class="container-xxl py-5 bg-dark hero-header mb-5">
+<div class="container-xxl py-3 bg-dark hero-header mb-5">
     <div class="container text-center my-5 pt-5 pb-4">
+        <h6 class="display-3 section-title text-white mb-3 animated slideInDown">About us</h6>
     </div>
 </div>
 
@@ -27,7 +28,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <h5 class="section-title ff-secondary text-start text-primary fw-normal">About Us</h5>
+                @*<h5 class="section-title ff-secondary text-start text-primary fw-normal">About Us</h5>*@
                 <h1 class="mb-4">Welcome to <i class="fa fa-utensils text-primary me-2"></i>Restoran</h1>
                 <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos erat ipsum et lorem et sit, sed stet lorem sit.</p>
                 <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
