--- a/Web/Restaurant.Web/Views/Home/Contact.cshtml
+++ b/Web/Restaurant.Web/Views/Home/Contact.cshtml
@@ -3,8 +3,9 @@
     this.ViewData["Title"] = "Home Page";
 }
 
-<div class="container-xxl py-5 bg-dark hero-header mb-5">
+<div class="container-xxl py-3 bg-dark hero-header mb-5">
     <div class="container text-center my-5 pt-5 pb-4">
+        <h6 class="display-3 text-white mb-3 animated slideInDown">Contacts</h6>
     </div>
 </div>
 
@@ -33,8 +34,7 @@
             </div>
             <div class="col-md-6 wow fadeIn" data-wow-delay="0.1s">
                 <iframe class="position-relative rounded w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                        frameborder="0" style="min-height: 350px; border:0;" allowfullscreen="" aria-hidden="false"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2932.660619808539!2d23.317585015889755!3d42.689730822210166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa85128bd8ae7f%3A0xc244508426d8dc3f!2sul.%20%22Han%20Asparuh%22%2037%2C%201000%20Sofia%20Center%2C%20Sofia!5e0!3m2!1sen!2sbg!4v1644333568620!5m2!1sen!2sbg" frameborder="0" style="min-height: 350px; border:0;" allowfullscreen="" aria-hidden="false"
                         tabindex="0"></iframe>
             </div>
             <div class="col-md-6">
