--- a/Web/Restaurant.Web/Views/Home/Privacy.cshtml
+++ b/Web/Restaurant.Web/Views/Home/Privacy.cshtml
@@ -1,13 +1,12 @@
 @{
     this.ViewData["Title"] = "Privacy Policy";
 }
-<div class="container-xxl py-5 bg-dark hero-header mb-5">
+<div class="container-xxl py-3 bg-dark hero-header mb-5">
     <div class="container text-center my-5 pt-5 pb-4">
-
+        <h6 class="display-3 section-title text-white mb-3 animated slideInDown">Privacy Policy</h6>
     </div>
 </div>
 
-<h1>Privacy Policy</h1>
 <p>Last updated: February 04, 2022</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the <a href="https://www.termsfeed.com/blog/sample-privacy-policy-template/" target="_blank">Privacy Policy Template</a>.</p>
