--- a/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
 <body>
     <div class="container-xxl position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-3 py-lg-0">
-            <a href="" class="navbar-brand p-0">
+            <a href="" class="navbar-brand p-0" >
                 <h1 class="text-primary m-0"><i class="fa fa-utensils me-3"></i>Restoran</h1>
                 <!-- <img src="img/logo.png" alt="Logo"> -->
             </a>
@@ -45,7 +45,6 @@
                 <div class="navbar-nav ms-auto py-0 pe-4">
                     <a class="nav-item nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     <a class="nav-item nav-link" asp-area="" asp-controller="Home" asp-action="About">About</a>
-                    <a class="nav-item nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact us</a>
                     <a class="nav-item nav-link" asp-area="" asp-controller="Menu" asp-action="Index">Menu</a>
                     <a class="nav-item nav-link" asp-area="" asp-controller="Reservation" asp-action="Book">Book a table</a>
                     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
@@ -70,19 +69,20 @@
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
+                <div class="col-xxl-4 col-md-4">
                     <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Company</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Reservation</a>
+                    <a class="btn btn-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    <a class="btn btn-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact us</a>
                     <a class="btn btn-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy policy</a>
+                    <a class="btn btn-link" asp-area="" asp-controller="Home" asp-action="About">About</a>
+                    <a class="btn btn-link" asp-area="" asp-controller="Reservation" asp-action="Book">Book a table</a>
 
-                    <a class="btn btn-link" href="">Terms & Condition</a>
+
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-xxl-4 col-md-4">
                     <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> ul. "Han Asparuh" 37, 1000 Sofia Center, Sofia.</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+359 123 456 789</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
@@ -91,29 +91,22 @@
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening</h4>
-                    <h5 class="text-light fw-normal">Monday - Saturday</h5>
-                    <p>09AM - 09PM</p>
-                    <h5 class="text-light fw-normal">Sunday</h5>
-                    <p>10AM - 08PM</p>
+                <div class="col-xxl-4 col-md-4">
+                    <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Working hours</h5>
+                    <h6 class="text-light fw-normal">Monday - Sunday</h6>
+                    <p>09:00 - 23:00</p>
+                    <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Delivery hours</h5>
+                    <h6 class="text-light fw-normal">Monday - Sunday</h6>
+                    <p>12:00 -00:00</p>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-primary w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
-                </div>
+
             </div>
         </div>
         <div class="container">
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
-
+                        &copy; <a class="border-bottom" href="#">Restaurant</a>, All Right Reserved.
                         Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
                         Distributed By <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a>
                     </div>
@@ -122,7 +115,7 @@
                             <a href="">Home</a>
                             <a href="">Cookies</a>
                             <a href="">Help</a>
-                            <a href="">FQAs</a>
+                            <a href="">FAQ</a>
                         </div>
                     </div>
                 </div>
