--- a/Web/Restaurant.Web/Views/Home/Index.cshtml
+++ b/Web/Restaurant.Web/Views/Home/Index.cshtml
@@ -67,7 +67,6 @@
     </div>
 </div>
 <!-- Service End -->
-
 <!-- Testimonial Start -->
 <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
     <div class="container">
@@ -86,13 +85,18 @@
                         <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-4.jpg" style="width: 50px; height: 50px;">
                         <div class="ps-3">
                             <h5 class="mb-1">@review.FullName</h5>
-                            <small>@review.ApplicationUserName</small>
+                            @*<small>@review.ApplicationUserName</small>*@
                         </div>
                     </div>
                 </div>
             }
-
         </div>
+
+    </div>
+</div>
+<div class="container-xxl py-lg-2 wow fadeInUp" data-wow-delay="0.1s">
+    <div class="col-xl-12">
+        <a type="submit" class="btn btn-primary w-100 py-3 form-group" asp-controller="Review" asp-action="Add">Leave a review</a>
     </div>
 </div>
 <!-- Testimonial End -->
