--- a/Web/Restaurant.Web/Views/Reservation/Book.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/Book.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Restaurant.Common
 @using Restaurant.Web.ViewModels.InputModels
-@model BookTableInputModel
+@model AddReservationInputModel
 
 @{
     this.ViewData["Title"] = "Reservation";
