--- a/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
@@ -32,9 +32,16 @@
     <link href="~/css/style.css" rel="stylesheet" asp-append-version="true">
 </head>
 <body>
+    <!-- Spinner Start -->
+    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+        <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+    </div>
+    <!-- Spinner End -->
     <div class="container-xxl position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-3 py-lg-0">
-            <a href="" class="navbar-brand p-0" >
+            <a href="" class="navbar-brand p-0">
                 <h1 class="text-primary m-0"><i class="fa fa-utensils me-3"></i>Restoran</h1>
                 <!-- <img src="img/logo.png" alt="Logo"> -->
             </a>
@@ -72,12 +79,10 @@
                 <div class="col-xxl-4 col-md-4">
                     <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Company</h4>
                     <a class="btn btn-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    <a class="btn btn-link" asp-area="" asp-controller="Home" asp-action="About">About</a>
+                    <a class="btn btn-link" asp-area="" asp-controller="Review" asp-action="All">Customer reviews</a>
                     <a class="btn btn-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact us</a>
                     <a class="btn btn-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy policy</a>
-                    <a class="btn btn-link" asp-area="" asp-controller="Home" asp-action="About">About</a>
-                    <a class="btn btn-link" asp-area="" asp-controller="Reservation" asp-action="Book">Book a table</a>
-
-
                 </div>
                 <div class="col-xxl-4 col-md-4">
                     <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h4>
