--- a/Web/Restaurant.Web/Views/Home/Index.cshtml
+++ b/Web/Restaurant.Web/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
             <div class="col-lg-6 text-center text-lg-start">
                 <h1 class="display-3 text-white animated slideInLeft">Enjoy Our<br>Delicious Meal</h1>
                 <p class="text-white animated slideInLeft mb-4 pb-2">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                <a href="" class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft">Book A Table</a>
+                <a class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft" asp-controller="Reservation" asp-action="Book">Book A Table</a>
             </div>
             <div class="col-lg-6 text-center text-lg-end overflow-hidden">
                 <img class="img-fluid" src="img/hero.png" alt="">
@@ -72,7 +72,7 @@
     <div class="container">
         <div class="text-center">
             <h5 class="section-title ff-secondary text-center text-primary fw-normal">Testimonial</h5>
-            <h1 class="mb-5">Our Clients Say!!!</h1>
+            <h1 class="mb-5">Customer feedback</h1>
         </div>
         <div class="owl-carousel testimonial-carousel">
 
@@ -82,10 +82,17 @@
                     <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                     <p>@review.Description</p>
                     <div class="d-flex align-items-center">
-                        <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-4.jpg" style="width: 50px; height: 50px;">
+                        <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg" style="width: 50px; height: 50px;">
                         <div class="ps-3">
                             <h5 class="mb-1">@review.FullName</h5>
-                            @*<small>@review.ApplicationUserName</small>*@
+                            <div class="rated">
+
+                                @for (int i = 0; i < review.Rating; i++)
+                                {
+                                    <input type="radio" checked><label>☆</label>
+                                }
+
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -96,7 +103,8 @@
 </div>
 <div class="container-xxl py-lg-2 wow fadeInUp" data-wow-delay="0.1s">
     <div class="col-xl-12">
-        <a type="submit" class="btn btn-primary w-100 py-3 form-group" asp-controller="Review" asp-action="Add">Leave a review</a>
+        <a class="btn btn-primary w-100 py-3" asp-controller="Review" asp-action="Add">Leave a review</a>
     </div>
 </div>
+
 <!-- Testimonial End -->
