--- a/Web/Restaurant.Web/Views/Review/Add.cshtml
+++ b/Web/Restaurant.Web/Views/Review/Add.cshtml
@@ -11,28 +11,28 @@
 
     </div>
 </div>
+<div class="col-md-12 bg-dark">
+    <div class="p-5 wow fadeInUp" data-wow-delay="0.2s">
+        <h1 class="text-white mb-4 text-center">Tell us about your experience!</h1>
+        <h5 class="text-center text-white fw-normal">Rate us!</h5>
+        <span class="form-check text-center" asp-validation-for="Rating"></span>
 
-<!-- Reservation Start -->
-
-
-        <div class="col-md-12 bg-dark">
-            <div class="p-5 wow fadeInUp" data-wow-delay="0.2s">
-                <div class="col-xl-12 d-flex align-items-center">
-                    <h1 class="text-white mb-4">Tell us about your experience!</h1>
-                </div>
-                <form method="post">
-                    <div class="col-12">
-                        <div class="form-floating">
-                            <textarea class="form-control col-xl-12" asp-for="Description" placeholder="Let us know what you think!" style="height: 100px"></textarea>
-                            <label asp-for="Description">Let us know what you think!</label>
-                            <span asp-validation-for="Description" class="text-white"></span>
-
-                        </div>
-                    </div>
-                    <h1></h1>
-                    <div class="col-12">
-                        <button class="btn btn-primary w-100 py-3 form-control-lg" type="submit">Submit</button>
-                    </div>
-                </form>
+        <form method="post">
+            <div class="rated">
+                <input type="radio" name="rating" value="5" id="5"><label for="5">☆</label>
+                <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label>
+                <input type="radio" name="rating" value="3" id="3"><label for="3">☆</label>
+                <input type="radio" name="rating" value="2" id="2"><label for="2">☆</label>
+                <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label>
             </div>
-        </div>
+            <div class="form-floating">
+                <textarea class="form-control col-xl-12" asp-for="Description" placeholder="Let us know what you think!" style="height: 200px"></textarea>
+                <label asp-for="Description">Let us know what you think!</label>
+                <span asp-validation-for="Description" class="text-white"></span>
+            </div>
+            <h1></h1>
+            <button class="btn btn-primary w-100 py-3 form-lg" type="submit">Submit</button>
+        </form>
+    </div>
+</div>
+
