--- a/Web/Restaurant.Web/Views/Review/All.cshtml
+++ b/Web/Restaurant.Web/Views/Review/All.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Restaurant.Common
-@using Restaurant.Web.ViewModels.InputModels
+@using Restaurant.Web.ViewModels.Review
+@model ReviewListViewModel
 
 @{
     this.ViewData["Title"] = "All reviews";
@@ -8,4 +9,34 @@
 <div class="container-xxl py-3 bg-dark hero-header mb-5">
     <div class="container text-center my-5 pt-5 pb-4">
     </div>
+</div>
+
+<div class="row g-4">
+    <div class="text-center">
+        <h5 class="section-title ff-secondary text-center text-primary fw-normal">Testimonial</h5>
+        <h1 class="mb-5">Customer feedback</h1>
+    </div>
+
+    @foreach (var review in Model.Reviews)
+    {
+        <div class="col-lg-12">
+            <div class="testimonial-item bg-transparent border rounded p-4">
+                <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
+                <h2>@review.Description</h2>
+                <div class="d-flex align-items-center">
+                    <img class="img-fluid flex-shrink-0 rounded-circle" src="~/img/testimonial-3.jpg" asp-append-version="true" yle="width: 50px; height: 50px;">
+                    <div class="ps-3">
+                        <p class="mb-1">@review.FullName</p>
+                        <div class="rated">
+
+                            @for (int i = 0; i < review.Rating; i++)
+                            {
+                                <input type="radio" checked><label>☆</label>
+                            }
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
 </div>
