--- a/Web/Restaurant.Web/wwwroot/css/style.css
+++ b/Web/Restaurant.Web/wwwroot/css/style.css
@@ -477,3 +477,92 @@
     padding-right: 0;
     border-right: none;
 }
+
+.rated {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center
+}
+
+    .rated > input {
+        display: none
+    }
+
+    .rated > label {
+        position: relative;
+        width: 1em;
+        font-size: 30px;
+        font-weight: 300;
+        color: #FFD600;
+        cursor: pointer
+    }
+
+        .rated > label::before {
+            content: "\2605";
+            position: absolute;
+            opacity: 0
+        }
+
+        .rated > label:hover:before,
+        .rated > label:hover ~ label:before {
+            opacity: 1 !important
+        }
+
+    .rated > input:checked ~ label:before {
+        opacity: 1
+    }
+
+  
+
+.rating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center
+}
+
+    .rating > input {
+        display: none
+    }
+
+    .rating > label {
+        position: relative;
+        width: 1em;
+        font-size: 30px;
+        font-weight: 300;
+        color: #FFD600;
+        cursor: pointer
+    }
+
+        .rating > label::before {
+            content: "\2605";
+            position: absolute;
+            opacity: 0
+        }
+
+        .rating > label:hover:before,
+        .rating > label:hover ~ label:before {
+            opacity: 1 !important
+        }
+
+    .rating > input:checked ~ label:before {
+        opacity: 1
+    }
+
+    .rating:hover > input:checked ~ label:before {
+        opacity: 0.4
+    }
+
+.buttons {
+    top: 36px;
+    position: relative
+}
+
+.rating-submit {
+    border-radius: 15px;
+    color: #fff;
+    height: 49px
+}
+
+    .rating-submit:hover {
+        color: #fff
+    }
