--- a/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
@@ -23,8 +23,7 @@
     <!-- Libraries Stylesheet -->
     <link href="~/lib/animate/animate.min.css" rel="stylesheet" asp-append-version="true">
     <link href="~/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" asp-append-version="true">
-    <link href="~/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" asp-append-version="true" />
-
+    <link href="~/lib/fontawesome/css/all.css" rel="stylesheet" asp-append-version="true"/>
     <!-- Customized Bootstrap Stylesheet -->
     <link href="~/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true">
 
@@ -141,9 +140,7 @@
     <script src="~/lib/waypoints/waypoints.min.js" asp-append-version="true"></script>
     <script src="~/lib/counterup/counterup.min.js" asp-append-version="true"></script>
     <script src="~/lib/owlcarousel/owl.carousel.min.js" asp-append-version="true"></script>
-    <script src="~/lib/tempusdominus/js/moment.min.js" asp-append-version="true"></script>
-    <script src="~/lib/tempusdominus/js/moment-timezone.min.js" asp-append-version="true"></script>
-    <script src="~/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js" asp-append-version="true"></script>
+
 
     <!-- Template Javascript -->
     <script src="~/js/main.js"></script>
