--- a/Web/Restaurant.Web/Views/Review/All.cshtml
+++ b/Web/Restaurant.Web/Views/Review/All.cshtml
@@ -20,20 +20,19 @@
     @foreach (var review in Model.Reviews)
     {
         <div class="col-lg-12">
-            <div class="testimonial-item bg-transparent border rounded p-4">
+            <div class="testimonial-item bg-transparent border border-secondary border-5 rounded p-4">
                 <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                 <h2>@review.Description</h2>
                 <div class="d-flex align-items-center">
                     <img class="img-fluid flex-shrink-0 rounded-circle" src="~/img/testimonial-3.jpg" asp-append-version="true" yle="width: 50px; height: 50px;">
                     <div class="ps-3">
                         <p class="mb-1">@review.FullName</p>
-                        <div class="rated">
 
                             @for (int i = 0; i < review.Rating; i++)
                             {
-                                <input type="radio" checked><label>☆</label>
+                                <i class="fa fa-star text-primary fs-3"></i>
                             }
-                        </div>
+
                     </div>
                 </div>
             </div>
