--- a/Web/Restaurant.Web/Views/Reservation/Success.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/Success.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Restaurant.Common
-
+@using Restaurant.Web.ViewModels.Reservation
+@model ReservationViewModel
 @{
     this.ViewData["Title"] = "Reservation";
 }
