--- a/Web/Restaurant.Web/Views/Reservation/Book.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/Book.cshtml
@@ -29,7 +29,7 @@
                 <h5 class="section-title ff-secondary text-start text-primary fw-normal">Reservation</h5>
                 <h1 class="text-white mb-4">Book A Table Online</h1>
                 <form method="post">
-                    <div asp-validation-summary="All"></div>
+                    <div asp-validation-summary="ModelOnly" class="text-white fs-5"></div>
                     <div class="row g-3">
                         <div class="col-md-6">
                             <div class="form-floating">
@@ -67,7 +67,8 @@
                                         <option value=@i>@i:00</option>
                                     }
                                 </select>
-                                <label asp-for=NumberOfPeople>Choose a time</label>
+                                <label asp-for=ReservationTime>Choose a time</label>
+                                <span asp-validation-for="ReservationTime" class="text-white"></span>
                             </div>
                         </div>
                         <div class="col-md-6">
