--- a/Web/Restaurant.Web/Views/Reservation/Success.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/Success.cshtml
@@ -2,14 +2,13 @@
 @using Restaurant.Web.ViewModels.Reservation
 @model ReservationViewModel
 @{
-    this.ViewData["Title"] = "Reservation";
+    this.ViewData["Title"] = "Your reservation";
 }
-
-<!-- TO DO: Add view model and show info about reservation. -->
-
 
 <div class="container-xxl py-3 bg-dark hero-header mb-5">
     <div class="container text-center my-5 pt-5 pb-4">
         <h6 class="display-5 section-title text-white mb-3 animated slideInDown">Thank you for choosing our restaurant.</h6>
     </div>
 </div>
+<!-- TO DO: Add view model and show info about reservation. -->
+
