--- a/Web/Restaurant.Web/Views/Review/Add.cshtml
+++ b/Web/Restaurant.Web/Views/Review/Add.cshtml
@@ -18,11 +18,11 @@
         <span class="form-check text-center" asp-validation-for="Rating"></span>
         <form method="post">
             <div class="rating mb-5">
-                <input type="radio" name="rating" value="5" id="5"><label for="5" class="fs-1">☆</label>
-                <input type="radio" name="rating" value="4" id="4"><label for="4" class="fs-1">☆</label>
-                <input type="radio" name="rating" value="3" id="3"><label for="3" class="fs-1">☆</label>
-                <input type="radio" name="rating" value="2" id="2"><label for="2" class="fs-1">☆</label>
-                <input type="radio" name="rating" value="1" id="1"><label for="1" class="fs-1">☆</label>
+                <input type="radio" name="rating" value= 5 id="5"><label for="5" class="fs-1">☆</label>
+                <input type="radio" name="rating" value= 4 id="4"><label for="4" class="fs-1">☆</label>
+                <input type="radio" name="rating" value= 3 id="3"><label for="3" class="fs-1">☆</label>
+                <input type="radio" name="rating" value= 2 id="2"><label for="2" class="fs-1">☆</label>
+                <input type="radio" name="rating" value= 1 id="1"><label for="1" class="fs-1">☆</label>
             </div>
             <div class="form-floating">
                 <textarea class="form-control col-xl-12" asp-for="Description" placeholder="Share your experience, recommendations, etc." style="height: 200px"></textarea>
