--- a/Web/Restaurant.Web/Views/Menu/All.cshtml
+++ b/Web/Restaurant.Web/Views/Menu/All.cshtml
@@ -54,51 +54,11 @@
             <div class="tab-content">
                 <div id="tab-1" class="tab-pane fade show p-0 active">
                     <div class="row g-4">
-                        @foreach (var meal in Model.Meals.Where(m => m.MealType == "Breakfast"))
+                        @foreach (var meal in Model.Meals.Where(m => m.Category.Name == "Desserts"))
                          {
                             <div class="col-lg-6">
                                 <div class="d-flex align-items-center">
-                                    <img class="flex-shrink-0 img-fluid rounded" src="img/menu-7.jpg" alt="" style="width: 80px;">
-                                    <div class="w-100 d-flex flex-column text-start ps-4">
-                                        <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                            <span>@meal.Name</span>
-                                            <span class="text-primary">@meal.Price</span>
-                                        </h5>
-                                        <small class="fst-italic">@meal.Description</small>
-                                    </div>
-                                </div>
-                            </div>
-                         }
-                    </div>
-                </div>
-
-                <div id="tab-2" class="tab-pane fade show p-0">
-                    <div class="row g-4">
-                        @foreach (var meal in Model.Meals.Where(m => m.MealType == "Lunch"))
-                         {
-                            <div class="col-lg-6">
-                                <div class="d-flex align-items-center">
-                                    <img class="flex-shrink-0 img-fluid rounded" src="img/menu-7.jpg" alt="" style="width: 80px;">
-                                    <div class="w-100 d-flex flex-column text-start ps-4">
-                                        <h5 class="d-flex justify-content-between border-bottom pb-2">
-                                            <span>@meal.Name</span>
-                                            <span class="text-primary">@meal.Price</span>
-                                        </h5>
-                                        <small class="fst-italic">@meal.Description</small>
-                                    </div>
-                                </div>
-                            </div>
-                         }
-                    </div>
-                </div>
-
-                <div id="tab-3" class="tab-pane fade show p-0">
-                    <div class="row g-4">
-                        @foreach (var meal in Model.Meals.Where(m => m.MealType == "Dinner"))
-                         {
-                            <div class="col-lg-6">
-                                <div class="d-flex align-items-center">
-                                    <img class="flex-shrink-0 img-fluid rounded" src="img/menu-7.jpg" alt="" style="width: 80px;">
+                                    <img class="flex-shrink-0 img-fluid rounded" src=@meal.ImageUrl alt="" style="width: 80px;" asp-append-version="true">
                                     <div class="w-100 d-flex flex-column text-start ps-4">
                                         <h5 class="d-flex justify-content-between border-bottom pb-2">
                                             <span>@meal.Name</span>
