Add all reservations functionality

--- a/Web/Restaurant.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Web/Restaurant.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -12,4 +12,8 @@
     }
     <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
+    <li><a class="nav-item nav-link" asp-area="" asp-controller="Reservation" asp-action="All">My reservations</a></li>
+    <li><a class="nav-item nav-link" asp-area="" asp-controller="Address" asp-action="All">My addresses</a></li>
+
+
 </ul>
