--- a/Web/Restaurant.Web/Views/Home/Contact.cshtml
+++ b/Web/Restaurant.Web/Views/Home/Contact.cshtml
@@ -1,11 +1,11 @@
 ﻿@using Restaurant.Common
 @{
-    this.ViewData["Title"] = "Home Page";
+    this.ViewData["Title"] = "Contacts";
 }
 
-<div class="container-xxl py-3 bg-dark hero-header mb-5">
+<div class="container-xxl py-1 bg-dark hero-header mb-5">
     <div class="container text-center my-5 pt-5 pb-4">
-        <h6 class="display-3 text-white mb-3 animated slideInDown">Contacts</h6>
+        <p class="display-3 section-title text-white mb-3 animated slideInDown">Contacts</p>
     </div>
 </div>
 
