--- a/Web/Restaurant.Web/Views/Reservation/Success.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/Success.cshtml
@@ -5,9 +5,9 @@
     this.ViewData["Title"] = "Your reservation";
 }
 
-<div class="container-xxl py-3 bg-dark hero-header mb-5">
+<div class="container-xxl py-1 bg-dark hero-header mb-5">
     <div class="container text-center my-5 pt-5 pb-4">
-        <span class="display-5 section-title text-white mb-3 animated slideInDown">Thank you for choosing our restaurant.</span>
+        <p class="display-3 section-title text-white mb-3 animated slideInDown">Thank you for choosing our restaurant.</p>
     </div>
 </div>
 
