--- a/Web/Restaurant.Web/Views/Home/About.cshtml
+++ b/Web/Restaurant.Web/Views/Home/About.cshtml
@@ -2,9 +2,9 @@
     this.ViewData["Title"] = "About us";
 }
 
-<div class="container-xxl py-3 bg-dark hero-header mb-5">
+<div class="container-xxl py-1 bg-dark hero-header mb-5">
     <div class="container text-center my-5 pt-5 pb-4">
-        <h6 class="display-3 section-title text-white mb-3 animated slideInDown">About us</h6>
+        <p class="display-3 section-title text-white mb-3 animated slideInDown">About us</p>
     </div>
 </div>
 
