--- a/Web/Restaurant.Web/Views/Review/All.cshtml
+++ b/Web/Restaurant.Web/Views/Review/All.cshtml
@@ -13,6 +13,8 @@
     </div>
 </div>
 
+<!-- To do: Improve UI - add bootstrap card class. -->
+
 <div class="row g-4">
     <div class="text-center">
         <h5 class="section-title ff-secondary text-center text-primary fw-normal">Testimonial</h5>
@@ -29,10 +31,10 @@
                     <img class="img-fluid flex-shrink-0 rounded-circle" src="~/img/testimonial-3.jpg" asp-append-version="true" yle="width: 50px; height: 50px;">
                     <div class="ps-3">
                         <p class="mb-1">@review.FullName</p>
-                            @for (int i = 0; i < review.Rating; i++)
-                            {
-                                <i class="fa fa-star text-primary fs-3"></i>
-                            }
+                        @for (int i = 0; i < review.Rating; i++)
+                        {
+                            <i class="fa fa-star text-primary fs-3"></i>
+                        }
 
                     </div>
                 </div>
